<resources>
<string name="app_name">OsMoDroid</string>
<string name="start">Start</string>
<string name="stop">Stop</string>
<string name="serviceStatus">State: </string>
<string name="location">Location: </string>
<string name="sends">Status: </string>
<string name="url">Address: </string>
<string name="settings">Settings</string>
<string name="period">Sampling GPS </string>
<string name="succes">Successfully</string>
<string name="error">Error: </string>
<string name="Sputniki">Satellites: </string>
<string name="GlonasFindString"> uses Glonass</string>
<string name="NoConnection">No connection</string>
<string name="Unknow">Unknown</string>
<string name="NotDefined">Undefined</string>
<string name="Sended">Sending:</string>
<string name="Adres">Address: </string>
<string name="RepeatAuth">Reset login data</string>
<string name="Settings">Settings</string>
<string name="EqualsParameters">Equate settings</string>
<string name="AgreeRepeatAuth">Confirm re-authorization request</string>
<string name="ChangeAdresMonitor">This change monitoring address!</string>
<string name="yes">Yes</string>
<string name="No">No</string>
<string name="AgreeParameterEqual">Confirm equating transmission parameters and recording</string>
<string name="TrackRecordParameterChanges">Track recording parameters will change</string>
<string name="Running">Launched</string>
<string name="NotRunning">Not launched</string>
<string name="Status">Status:</string>
<string name="Sendcount">Sends: </string>
<string name="ErrorRecieve">Error retrieving</string>
<string name="AuthWait">Authorization request , please wait ...</string>
<string name="CheckInternet">Failed to authenticate against . Check the operation of the Internet </string>
<string name="CanNotWriteHeader">Could not write file track </string>
<string name="CanNotWriteEnd">Not write file ending track </string>
<string name="SendCourseChange">Change the transmission rate:</string>
<string name="TrackCourseChange">Changing course track:</string>
<string name="ServerError">Server Error</string>
<string name="buffer">Buffer: </string>
<string name="request">Authorization request, please wait ...</string>
<string name="noappcode">Empty password</string>
<string name="nokey">Authorize failed</string>
<string name="getkey">Authorize</string>
<string name="getadres">Get Address</string>
<string name="getdevice">Get device</string>
<string name="enterchanel">Enter to Group</string>
<string name="SimLinkButtonText">Update</string>
<string name="addsymlink">Add link</string>
<string name="symlink">My Links</string>
<string name="sendnow">Send Now</string>
<string name="message">Message</string>
<string name="sendsupport">Report to support</string>
<string name="about">About</string>
<string name="abouttext">OsMoDroid, monitoring client for OsMo\n Main developer: Denis Fokin (c) 2012-2014 \n \n Using this application you accept the Terms of Use : http://osmo.mobi/terms/ \n \n Site OsMoDroid: http://osmodroid.com \nManual on OsMoDroid: http://osmodroid.com/help/ \nLink with OsmAnd: http://osmodroid.com/withosmand.html \n \nManual monitoring : http://esya.ru/om/start/ \nMap Data © OpenStreetMap contributors www.osm.org \nTiles © GIScience Heidelberg</string>
<string name="send">>></string>
<string name="cancel">Cancel</string>
<string name="speed">Speed: km/h</string>
<string name="auth">Authorization</string>
<string name="warnhash">Identification data ( hash or check number ) is incorrect, you need to reset the hash \n or enter it manually in the settings</string>
<string name="nomapapp">Not installed application like Maps</string>
<string name="showonmap">Shown on the map</string>
<string name="chanal">Group </string>
<string name="refresh">Update</string>
<string name="coordinats">Location:</string>
<string name="Distantion">Range:</string>
<string name="Km"> Km</string>
<string name="m"> m </string>
<string name="chanals">Groups</string>
<string name="yourmessage">Your message:</string>
<string name="sendingmessage">Sending a message</string>
<string name="sharelink">Share</string>
<string name="deviceslis">Device List</string>
<string name="messagetochanal">Message to the Group</string>
<string name="copylink">Copy this link</string>
<string name="openinbrowser">Open in Browser</string>
<string name="exitfromchanal">Exit Group</string>
<string name="createchanel">Create Group</string>
<string name="enterchanal">Become a Group</string>
<string name="chanalname">Group Name:</string>
<string name="chanalcode">Group Code:</string>
<string name="privatechanal">Private Group</string>
<string name="chanalkey">Key Group</string>
<string name="createchanal">Group register here</string>
<string name="noallenter">Does not include all data</string>
<string name="bindtochanal">Connection to the Group</string>
<string name="requestdevicebefore">Prior request device</string>
<string name="chatwith">Chat with </string>
<string name="devices">Devices</string>
<string name="writemessage">Write message</string>
<string name="messages">Messages</string>
<string name="binddevice">Bind device</string>
<string name="hash">Hash:</string>
<string name="controlnumber">Confirmation code:</string>
<string name="bindapp">Connect app</string>
<string name="esya_ru_notrespond">OsMoDroid can`t access to server</string>
<string name="tracker">Tracker</string>
<string name="links">Links</string>
<string name="tracks">Tracks</string>
<string name="notifications">Alerts</string>
<string name="stat">Statistics</string>
<string name="login">Login to Esya.ru:</string>
<string name="password">Password:</string>
<string name="appauth">Authorization Application</string>
<string name="inbuffer"> in buffer :</string>
<string name="authpleasewait">Authorization request , please wait ...</string>
<string name="commandpleasewait">Command is executed , please wait ...</string>
<string name="resultenterchanalnoget">Result entrance to the Group is not received </string>
<string name="linksnotget">Links do not readed</string>
<string name="noanswerfromserver">No response from the server</string>
<string name="urlnoget">URL unable to get</string>
<string name="prefsaved">Settings are saved to the memory card</string>
<string name="prefloaded">Settings read from the memory card</string>
<string name="started">Running</string>
<string name="stoped">Stopped</string>
<string name="monitoringondevice">Monitoring on the device \"</string>
<string name="enternet">Entered the network</string>
<string name="exitnet">Left the network </string>
<string name="device"> The device \" </string>
<string name="accuracy"> Accuracy :</string>
<string name="maximal"> Max : </string>
<string name="kmch">km/h</string>
<string name="average"> Average :</string>
<string name="going">Mileage:</string>
<string name="km"> km </string>
<string name="worktime"> Working time :</string>
<string name="observers">Observers</string>
<string name="monitoringstarted">Monitoring started</string>
<string name="monitoringactive">Monitoring is active</string>
<string name="tracktoshort">Track is too short (less than 1 KB), the file will not be saved or uploaded</string>
<string name="osmodroiduploadfile">OsMoDroid File upload</string>
<string name="commansendlocation"> Command: Sending position </string>
<string name="letsgo">Lets go!</string>
<string name="comand">Command:</string>
<string name="errorcode"> Error code :</string>
<string name="detalisation"> Explanation :</string>
<string name="query">Query :</string>
<string name="versionosmodroid">version OsMoDroid:</string>
<string name="dayssend">shipments per day:</string>
<string name="monthsends">shipments per month:</string>
<string name="exit">Exit</string>
<string name="savepref">Save Settings on the SDcard</string>
<string name="loadpref">Load settings from the SDcard</string>
<string name="more">More</string>
<string name="iamhere"> I\'m here ! </string>
<string name="linkcopied">Link copied to clipboard</string>
<string name="Stoping">Stop</string>
<string name="closesession">Close session ?</string>
<string name="loading">Loading ...</string>
<string name="uploadtrera">Upload to TReRa ?</string>
<string name="servermessage">Message from the server</string>
<string name="deletelink">Remove link</string>
<string name="uploadtotrera">Upload to TReRa</string>
<string name="delete">Delete</string>
<string name="channelsend">Send to Groups</string>
<string name="alarm">Alarm</string>
<string name="recivedmessages">Received messages:</string>
<string name="spd">Speed</string>
<string name="max">Max</string>
<string name="avg">Average</string>
<string name="inway">in the way</string>
<string name="ingoing2">Mileage</string>
<string name="sended">Sended</string>
<string name="writen"> Recorded:</string>
<string name="wekksends">Week sends:</string>
<string name="from_undefined">from anonymous</string>
<string name="map">Map</string>
<string name="drawer_open">open</string>
<string name="drawer_close">close</string>
<string name="iam">Me</string>
<string name="needgps">Need GPS Enabled</string>
<string name="enablegps">Please, enable GPS</string>
<string name="showtraces">Show traces</string>
<string name="enable_manual_rotation">Enable manual rotation</string>
<string name="enable_course_rotation">Enable course rotation</string>
<string name="copychID">Copy ID</string>
<string name="shareID">Share ID</string>
<string name="needauthtocreategroup">Need auth to create group</string>
<string name="name">Name</string>
<string name="trackerid">TrackerID</string>
<string name="shareid">Share TrackerID</string>
<string name="copytrackerid">Copy TrackerID</string>
<string name="color_dialog_title">Color Selection</string>
<string name="color_h">hue</string>
<string name="color_s">saturation</string>
<string name="color_v">value</string>
<string name="color_a">alpha</string>
<string name="unknown_location_now">Unknown location now</string>
<string name="color">Define color</string>
<string name="remote_commands">Remote Commands</string>
<string name="start_monitoring">Start monitoring</string>
<string name="stop_monitoring">Stop monitoring</string>
<string name="send_tts">Send TTS</string>
<string name="play_alarm_on">PLAY ALARM ON</string>
<string name="play_alarm_off">PLAY ALARM OFF</string>
<string name="signalisation_set_on">SIGNALISATION SET ON</string>
<string name="signalisation_set_off">SIGNALISATION SET OFF</string>
<string name="approximate_traffic">Approximate traffic</string>
</resources>