<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:alwaysDrawnWithCache="false" android:descendantFocusability="blocksDescendants">

	<TextView
	    android:id="@+id/serviceStatus"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="left"
	    android:text="@string/serviceStatus" />

	<TextView
	    android:id="@+id/URL"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="left"
	    android:text="@string/url" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <ToggleButton
	        android:id="@+id/toggleButton1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.49"
	        android:text="ToggleButton"
	        android:textOff="Рассылка в каналы"
	        android:textOn="Рассылка в каналы" />

	    <ToggleButton
	        android:id="@+id/alarmButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.08"
	        android:text="Сигнализация"
	        android:textOff="Сигнализация"
	        android:textOn="Сигнализация" />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="fill_horizontal" >

	    <Button
	        android:id="@+id/startButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.49"
	        android:clickable="false"
	        android:text="@string/start" />

	    <Button
	        android:id="@+id/exitButton"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_weight="0.41"
	        android:clickable="true"
	        android:text="@string/stop" />

	</LinearLayout>

	<Button
	    android:id="@+id/authButton"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/auth" />

	<TextView
		android:id="@+id/Location"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/location"
		android:textSize="22sp" />

	<TextView
		android:id="@+id/Send"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/sends" />

</LinearLayout>